--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A TOP project for a restaurant page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/joaojgabriel/restaurant#readme",
   "devDependencies": {
     "webpack": "^5.80.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.3"
   }
 }
