--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,6 @@
     "css-loader": "^6.7.3",
     "style-loader": "^3.3.2",
     "webpack": "^5.80.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.3"
+    "webpack-cli": "^5.0.1"
   }
 }
